--- a/config.json
+++ b/config.json
@@ -1,363 +1,18 @@
 {
-    "max_open_trades": 20,
-    "stake_currency": "USDT",
-    "stake_amount": 10,
-    "timeframe": "1h",
-    "dry_run": true,
-    "stoploss": -0.08,
-    "strategy": "AlexStrategyFinalV8",
-    "trading_mode": "futures",
-    "exchange": {
-        "name": "bybit",
-        "key": "",
-        "secret": "",
-        "ccxt_config": {
-            "enableRateLimit": true
-        },
-        "ccxt_async_config": {
-            "enableRateLimit": true,
-            "rateLimit": 200
-        },
-        "pair_whitelist": [
-            "BTC/USDT:USDT",
-            "ETH/USDT:USDT",
-            "LTC/USDT:USDT",
-            "BNB/USDT:USDT",
-            "XRP/USDT:USDT",
-            "ADA/USDT:USDT",
-            "DOT/USDT:USDT",
-            "SOL/USDT:USDT",
-            "LINK/USDT:USDT",
-            "AVAX/USDT:USDT",
-            "AKRO/USDT:USDT",
-            "ALICE/USDT:USDT",
-            "BB/USDT:USDT",
-            "BNX/USDT:USDT",
-            "CYBER/USDT:USDT",
-            "ETHFI/USDT:USDT",
-            "MOVR/USDT:USDT",
-            "NOT/USDT:USDT",
-            "PEOPLE/USDT:USDT",
-            "PORTAL/USDT:USDT",
-            "RUNE/USDT:USDT",
-            "WLD/USDT:USDT",
-            "YGG/USDT:USDT",
-            "ZRX/USDT:USDT",
-            "1000BEER/USDT:USDT",
-            "1000FLOKI/USDT:USDT",
-            "1000LUNC/USDT:USDT",
-            "1000PEPE/USDT:USDT",
-            "1000BONK/USDT:USDT",
-            "1000TURBO/USDT:USDT",
-            "1000RATS/USDT:USDT",
-            "10000SATS/USDT:USDT",
-            "SHIB1000/USDT:USDT",
-            "1000000BABYDOGE/USDT:USDT",
-            "FTM/USDT:USDT",
-            "NEAR/USDT:USDT",
-            "SAND/USDT:USDT",
-            "AXS/USDT:USDT",
-            "TRX/USDT:USDT",
-            "ATOM/USDT:USDT",
-            "CRV/USDT:USDT",
-            "SUSHI/USDT:USDT",
-            "AAVE/USDT:USDT",
-            "MATIC/USDT:USDT",
-            "WAVES/USDT:USDT",
-            "XMR/USDT:USDT",
-            "EOS/USDT:USDT",
-            "ETC/USDT:USDT",
-            "XTZ/USDT:USDT",
-            "BCH/USDT:USDT",
-            "UNI/USDT:USDT",
-            "ZEC/USDT:USDT",
-            "ALGO/USDT:USDT",
-            "FIL/USDT:USDT",
-            "THETA/USDT:USDT",
-            "LRC/USDT:USDT",
-            "MTL/USDT:USDT",
-            "KAVA/USDT:USDT",
-            "ICP/USDT:USDT",
-            "STORJ/USDT:USDT",
-            "EGLD/USDT:USDT",
-            "OMG/USDT:USDT",
-            "GRT/USDT:USDT",
-            "SKL/USDT:USDT",
-            "KSM/USDT:USDT",
-            "BAKE/USDT:USDT",
-            "ENJ/USDT:USDT",
-            "DASH/USDT:USDT",
-            "UNFI/USDT:USDT",
-            "ALPHA/USDT:USDT",
-            "1INCH/USDT:USDT",
-            "KLAY/USDT:USDT",
-            "CHR/USDT:USDT",
-            "XLM/USDT:USDT",
-            "SNX/USDT:USDT",
-            "YFI/USDT:USDT",
-            "MKR/USDT:USDT",
-            "BEL/USDT:USDT",
-            "COMP/USDT:USDT",
-            "TRB/USDT:USDT",
-            "CTK/USDT:USDT",
-            "CVC/USDT:USDT",
-            "SFP/USDT:USDT",
-            "BAL/USDT:USDT",
-            "BAT/USDT:USDT",
-            "IOTA/USDT:USDT"
-        ],
-        "pair_blacklist": [
-            "TFUEL/BTC",
-            "ONE/BTC",
-            "ATOM/BTC",
-            "XMR/BTC",
-            "BNB/BUSD",
-            "BNB/BTC",
-            "BNB/ETH",
-            "BNB/EUR",
-            "BNB/NGN",
-            "BNB/PAX",
-            "BNB/RUB",
-            "BNB/TRY",
-            "BNB/TUSD",
-            "BNB/USDC",
-            "BNB/USDS",
-            "EUR/USDT:USDT",
-            ".*UP/USDT:USDT",
-            ".*DOWN/USDT:USDT",
-            ".*BEAR/USDT:USDT",
-            ".*BULL/USDT:USDT",
-            "DOGE/USDT:USDT",
-            "BRD/BTC"
-        ],
-        "sandbox": false
-    },
-    "pairlists": [
-        {
-            "method": "StaticPairList",
-            "pairs": [
-                "BTC/USDT",
-                "SOL/USDT"
-            ]
-        }
-    ],
-    "entry_pricing": {
-        "price_side": "other",
-        "use_order_book": true,
-        "order_book_top": 1,
-        "price_last_balance": 0.0,
-        "ask_last_balance": 0,
-        "check_depth_of_market": {
-            "enabled": false,
-            "bids_to_ask_delta": 1
-        }
-    },
-    "exit_pricing": {
-        "price_side": "other",
-        "use_order_book": true,
-        "order_book_top": 1,
-        "price_last_balance": 0.0
-    },
-    "freqai": {
-        "enabled": true,
-        "identifier": "torch-lstm12",
-        "purge_old_models": 6,
-        "train_period_days": 120,
-        "backtest_period_days": 30,
-        "save_backtest_models": true,
-        "write_metrics_to_disk": true,
-        "feature_parameters": {
-            "include_timeframes": [
-                "1h",
-                "2h",
-                "4h"
-            ],
-            "indicator_periods_candles": [
-                10,
-                20
-            ],
-            "include_corr_pairlist": [
-                "BTC/USDT:USDT",
-                "ETH/USDT:USDT"
-            ],
-            "DI_threshold": 10,
-            "weight_factor": 0.5,
-            "principal_component_analysis": false,
-            "use_SVM_to_remove_outliers": true,
-            "svm_params": {
-                "shuffle": false,
-                "nu": 0.1
-            },
-            "label_period_candles": 24,
-            "include_shifted_candidates": 2,
-            "noise_standard_deviation": 0.01,
-            "buffer_train_data_candles": 20
-        },
-        "data_split_parameters": {
-            "test_size": 0.2,
-            "shuffle": false,
-            "random_state": 42
-        },
-        "label_parameters": {
-            "&-enter_long": {
-                "label_period_candles": 12
-            }
-        },
-        "model_training_parameters": {
-            "n_estimators": 150,
-            "max_depth": 10,
-            "min_samples_split": 5,
-            "min_samples_leaf": 2,
-            "max_features": "sqrt",
-            "random_state": 42,
-            "n_jobs": -1,
-            "class_weight": "balanced",
-            "learning_rate": 0.003,
-            "trainer_kwargs": {
-                "n_steps": null,
-                "batch_size": 32,
-                "n_epochs": 10
-            },
-            "model_kwargs": {
-                "num_lstm_layers": 3,
-                "hidden_dim": 128,
-                "dropout_percent": 0.4,
-                "window_size": 5
-            }
-        },
-        "conf_width": 1,
-        "fit_live_predictions_candles": 24,
-        "expiration_hours": 4,
-        "live_retrain_hours": 4,
-        "continual_learning": true,
-        "activate_tensorboard": false,
-        "rl_config": {
-            "train_cycles": 25,
-            "add_state_info": true,
-            "max_trade_duration_candles": 300,
-            "max_training_drawdown_pct": 0.02,
-            "cpu_count": 8,
-            "model_type": "PPO",
-            "policy_type": "MlpPolicy",
-            "model_reward_parameters": {
-                "rr": 1,
-                "profit_aim": 0.025
-            }
-        }
-    },
-    "margin_mode": "isolated",
-    "tradable_balance_ratio": 0.9,
-    "dry_run_wallet": 1000,
-    "fiat_display_currency": "USD",
-    "freqaimodel": "PyTorchLSTMRegressor",
-    "dataformat_ohlcv": "json",
-    "dataformat_trades": "jsongz",
-    "stoploss_on_exchange": false,
-    "cancel_open_orders_on_exit": false,
-    "unfilledtimeout": {
-        "unit": "minutes",
-        "entry": 10,
-        "exit": 30
-    },
-    "order_types": {
-        "entry": "market",
-        "exit": "market",
-        "emergency_exit": "market",
-        "force_entry": "market",
-        "force_exit": "market",
-        "stoploss": "market",
-        "stoploss_on_exchange": false,
-        "stoploss_on_exchange_interval": 60
-    },
-    "edge": {
-        "enabled": false,
-        "process_throttle_secs": 3600,
-        "calculate_since_number_of_days": 7,
-        "allowed_risk": 0.01,
-        "stoploss_range_min": -0.01,
-        "stoploss_range_max": -0.1,
-        "stoploss_range_step": -0.01,
-        "minimum_winrate": 0.6,
-        "minimum_expectancy": 0.2,
-        "min_trade_number": 10,
-        "max_trade_duration_minute": 1440,
-        "remove_pumps": false
-    },
-    "telegram": {
-        "enabled": false,
-        "token": "",
-        "chat_id": "",
-        "keyboard": [
-            [
-                "/daily",
-                "/stats",
-                "/balance",
-                "/profit"
-            ],
-            [
-                "/status table",
-                "/performance"
-            ],
-            [
-                "/reload_config",
-                "/count",
-                "/logs"
-            ]
-        ],
-        "notification_settings": {
-            "status": "silent",
-            "protection_trigger_global": "on",
-            "warning": "on",
-            "startup": "off",
-            "entry": "silent",
-            "entry_fill": "on",
-            "entry_cancel": "on",
-            "exit_cancel": "on",
-            "exit_fill": "on",
-            "exit": {
-                "roi": "silent",
-                "emergency_exit": "silent",
-                "force_exit": "silent",
-                "exit_signal": "silent",
-                "trailing_stop_loss": "silent",
-                "stop_loss": "silent",
-                "stoploss_on_exchange": "silent",
-                "custom_exit": "silent"
-            },
-            "strategy_msg": "silent"
-        },
-        "balance_dust_level": 0.01
-    },
-    "api_server": {
-        "enabled": true,
-        "listen_ip_address": "0.0.0.0",
-        "listen_port": 9020,
-        "verbosity": "error",
-        "enable_openapi": false,
-        "jwt_secret_key": "",
-        "ws_token": "",
-        "CORS_origins": [],
-        "username": "",
-        "password": ""
-    },
-    "bot_name": "",
-    "initial_state": "running",
-    "force_entry_enable": false,
-    "internals": {
-        "process_throttle_secs": 5
-    },
-    "margin": {
-        "enabled": true,
-        "leverage": 7.0
-    },
-    "logging": {
-        "loglevel": "DEBUG",
-        "logfile": "/freqtrade/user_data/logs/freqtrade.log"
-    },
-    "logger": {
-        "format": "%(asctime)s - %(name)s - %(levelname)s - %(message)s",
-        "level": "INFO",
-        "file": "/path/to/logfile.log",
-        "tensorboard": true
-    }
+  // This is an example configuration
+  // Please use at own risk
+  // For full documentation on Freqtrade configuration files please visit https://www.freqtrade.io/en/stable/configuration/
+  // Copy this file to user_data/config.json
+  // make sure your secret files are really in a secret place
+  // copy configs/exampleconfig_secret.json to user_data/config-private.json
+  // Change     "dry_run": true, to     "dry_run": false, after testing
+
+  "strategy": "NostalgiaForInfinityX6",
+  "add_config_files": [
+    "./trading_mode-spot.json",
+    "./pairlist-volume-binance-usdt.json",
+    "./blacklist-binance.json",
+    "./exampleconfig.json",
+    "./exampleconfig_secret.json"
+  ]
 }
